enlarged subj descr

--- a/templates/workshop/agreement.html
+++ b/templates/workshop/agreement.html
@@ -5,7 +5,7 @@
 <div class="container">
 <div class="row">
     <div class="col">
-        <h3 class='text-center m-2'>УСЛОВИЯ ИСПОЛЬЗОВАНИЯ СЕРВИСА (ред 3 от 08.11.2022).</h3><br>
+        <h3 class='text-center m-2'>УСЛОВИЯ ИСПОЛЬЗОВАНИЯ СЕРВИСА (ред 3 от 09.01.2023).</h3><br>
         
         <h5>1. Общие положения</h5>
         <p>
@@ -69,6 +69,10 @@
             доступными Слушателям, которые приобрели данные Обучающие материалы ранее. После удаления Преподавателем своей
             учетной записи ruversity.com утрачивает право продавать Обучающие материалы, созданные данным Преподавателем, новым
             пользователям за исключением случаев, оговариваемых в договоре на платное размещение.
+        </p>
+        <p>Администрация ruversity.ru не может размещать обучающие материалы, загруженные Преподавателями, на каких либо других площадках.
+        </p>
+        <p>Администрация ruversity.ru предоставляет Слушателям обучающие материалы, размещенные Преподавателями, только на условиях описанных в настоящих Условиях.
         </p>
         <p>
             После загрузки Обучающих материалов на сервер Преподаватель утрачивает доступ к ним. Все изменения и дополнения в
@@ -160,7 +164,7 @@
             условиями пользователю следует удалить свою учетную запись на ruversity.com
         </p>
         <p>
-            Данная редакция условий вступает в действие 08.11.2022.
+            Данная редакция условий вступает в действие 09.01.2023.
         </p>
 </div>
 
