--- a/templates/workshop/edit_subject.html
+++ b/templates/workshop/edit_subject.html
@@ -209,13 +209,13 @@
                     </select>
                 </div>
                 <div class="form-group">
-                    <label for="description"><strong>Редактировать краткое описание курса</strong></label>
-                    <textarea class='form-control' id="description" rows='4' minlength='160' maxlength='360'
+                    <label for="description"><strong>Редактировать краткое описание курса (160-1000 символов) </strong></label>
+                    <textarea class='form-control' id="description" rows='4' minlength='160' maxlength='1000'
                         name="description"
                         placeholder='Введите краткое описание курса. 160-360 символов.'></textarea>
                     <div class="form-group">
-                        <label for="prerequisites"> <strong>Редактировать предварительную подготовку</strong></label>
-                        <textarea class='form-control' rows='4' id="prerequisites" minlength='160' maxlength='360'
+                        <label for="prerequisites"> <strong>Редактировать предварительную подготовку (160-1000 символов)</strong></label>
+                        <textarea class='form-control' rows='4' id="prerequisites" minlength='160' maxlength='1000'
                             name="prerequisites"
                             placeholder='Введите требования к предварительной подготовке. 160-360 символов.'></textarea>
                     </div>
