--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -13,9 +13,9 @@
     <div class="col-2 border rounded-pill text-center bg-light p-2 img_scale"><a class='nav-link'
             href="{% url 'list_personal' %}">Личностное развитие</a></div>
     <div class="col-2 border rounded-pill text-center bg-light p-2 img_scale"><a class='nav-link'
-            href="{% url 'list_skills' %}">Домашние навыки</a></div>
+            href="{% url 'list_exam' %}">Подготовка к ЕГЭ</a></div>
     <div class="col-1 border rounded-pill text-center bg-light p-2 img_scale"><a class='nav-link'
-            href="{% url 'list_buisness' %}" >Бизнес</a></div>
+            href="{% url 'list_business' %}" >Бизнес</a></div>
     <div class="col-2 border rounded-pill text-center bg-light p-2 img_scale"><a class='nav-link' 
             href="{% url 'list_fundamental' %}">Фундаментальные знания</a></div>
     <div class="col-1 border rounded-pill text-center bg-light p-2 img_scale"><a class='nav-link'
